# astropy-helpers

./: .gitignore  .travis.yml  CHANGES.rst  README.rst  appveyor.yml  setup.cfg  setup.py
astropy_helpers/: setup_helpers.py  utils.py
astropy_helpers/sphinx/: conf.py
astropy_helpers/sphinx/ext/: automodapi.py  automodsumm.py
astropy_helpers/sphinx/ext/tests/: test_automodapi.py  test_automodsumm.py
docs/: basic.rst  conf.py  updating.rst  using.rst
extension_helpers/: conftest.py  distutils_helpers.py  openmp_helpers.py  setup_helpers.py
extension_helpers/tests/: __init__.py  test_openmp_helpers.py  test_setup_helpers.py
