[metadata]
name = extension-helpers
version = 0.1.dev0
provides = extension_helpers
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/astropy/extension-helpers
description = Utilities for building extensions in Python packages
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Framework :: Setuptools Plugin
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.5
packages = find:

[options.package_data]
extension_helpers = src/compiler.c

[options.extras_require]
docs = sphinx-astropy

[tool:pytest]
norecursedirs =
    .tox
    extension_helpers/tests/package_template
python_functions = test_
